bnfc/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Grammar/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListDecl                                (4)
	ListDecl ->                                        (5)
	ListDecl -> ListDecl Decl                          (6)
	Decl -> Type Ident ';'                             (7)
	Decl -> Type Ident '=' Expr ';'                    (8)
	Decl -> Type Ident '(' ListArg ')' Block           (9)
	Arg -> Type Ident                                  (10)
	Arg -> Type '&' Ident                              (11)
	ListArg ->                                         (12)
	ListArg -> Arg                                     (13)
	ListArg -> Arg ',' ListArg                         (14)
	Block -> '{' ListStmt '}'                          (15)
	ListStmt ->                                        (16)
	ListStmt -> ListStmt Stmt                          (17)
	Stmt -> ';'                                        (18)
	Stmt -> Block                                      (19)
	Stmt -> Decl                                       (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> 'return' Expr ';'                          (22)
	Stmt -> 'return' ';'                               (23)
	Stmt -> 'if' '(' Expr ')' Block                    (24)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (25)
	Stmt -> 'while' '(' Expr ')' Block                 (26)
	Stmt -> 'break'                                    (27)
	Stmt -> 'continue'                                 (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> 'print' '(' Expr ')'                       (30)
	Type -> 'int'                                      (31)
	Type -> 'string'                                   (32)
	Type -> 'boolean'                                  (33)
	Type -> 'void'                                     (34)
	Expr6 -> Ident                                     (35)
	Expr6 -> Integer                                   (36)
	Expr6 -> 'true'                                    (37)
	Expr6 -> 'false'                                   (38)
	Expr6 -> Ident '(' ListExpr ')'                    (39)
	Expr6 -> String                                    (40)
	Expr6 -> '(' Expr ')'                              (41)
	Expr5 -> '-' Expr6                                 (42)
	Expr5 -> '!' Expr6                                 (43)
	Expr5 -> Expr6                                     (44)
	Expr4 -> Expr4 MulOp Expr5                         (45)
	Expr4 -> Expr5                                     (46)
	Expr3 -> Expr3 AddOp Expr4                         (47)
	Expr3 -> Expr4                                     (48)
	Expr2 -> Expr2 RelOp Expr3                         (49)
	Expr2 -> Expr3                                     (50)
	Expr1 -> Expr2 '&&' Expr1                          (51)
	Expr1 -> Expr2                                     (52)
	Expr -> Expr1 '||' Expr                            (53)
	Expr -> Expr1                                      (54)
	ListExpr ->                                        (55)
	ListExpr -> Expr                                   (56)
	ListExpr -> Expr ',' ListExpr                      (57)
	AddOp -> '+'                                       (58)
	AddOp -> '-'                                       (59)
	MulOp -> '*'                                       (60)
	MulOp -> '/'                                       (61)
	MulOp -> '%'                                       (62)
	RelOp -> '<'                                       (63)
	RelOp -> '<='                                      (64)
	RelOp -> '>'                                       (65)
	RelOp -> '>='                                      (66)
	RelOp -> '=='                                      (67)
	RelOp -> '!='                                      (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'boolean'      { PT _ (TS _ 20) }
	'break'        { PT _ (TS _ 21) }
	'continue'     { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'print'        { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'void'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	ListDecl        rules 5, 6
	Decl            rules 7, 8, 9
	Arg             rules 10, 11
	ListArg         rules 12, 13, 14
	Block           rule  15
	ListStmt        rules 16, 17
	Stmt            rules 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
	Type            rules 31, 32, 33, 34
	Expr6           rules 35, 36, 37, 38, 39, 40, 41
	Expr5           rules 42, 43, 44
	Expr4           rules 45, 46
	Expr3           rules 47, 48
	Expr2           rules 49, 50
	Expr1           rules 51, 52
	Expr            rules 53, 54
	ListExpr        rules 55, 56, 57
	AddOp           rules 58, 59
	MulOp           rules 60, 61, 62
	RelOp           rules 63, 64, 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5

	Program        goto state 3
	ListDecl       goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDecl .                               (rule 4)
	ListDecl -> ListDecl . Decl                         (rule 6)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 4

	Decl           goto state 5
	Type           goto state 6

State 5

	ListDecl -> ListDecl Decl .                         (rule 6)

	'boolean'      reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	%eof           reduce using rule 6


State 6

	Decl -> Type . Ident ';'                            (rule 7)
	Decl -> Type . Ident '=' Expr ';'                   (rule 8)
	Decl -> Type . Ident '(' ListArg ')' Block          (rule 9)

	L_ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 33)

	'&'            reduce using rule 33
	L_ident        reduce using rule 33


State 8

	Type -> 'int' .                                     (rule 31)

	'&'            reduce using rule 31
	L_ident        reduce using rule 31


State 9

	Type -> 'string' .                                  (rule 32)

	'&'            reduce using rule 32
	L_ident        reduce using rule 32


State 10

	Type -> 'void' .                                    (rule 34)

	'&'            reduce using rule 34
	L_ident        reduce using rule 34


State 11

	Decl -> Type Ident . ';'                            (rule 7)
	Decl -> Type Ident . '=' Expr ';'                   (rule 8)
	Decl -> Type Ident . '(' ListArg ')' Block          (rule 9)

	'('            shift, and enter state 12
	';'            shift, and enter state 13
	'='            shift, and enter state 14


State 12

	Decl -> Type Ident '(' . ListArg ')' Block          (rule 9)

	')'            reduce using rule 12
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 32
	ListArg        goto state 33
	Type           goto state 34

State 13

	Decl -> Type Ident ';' .                            (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'boolean'      reduce using rule 7
	'break'        reduce using rule 7
	'continue'     reduce using rule 7
	'false'        reduce using rule 7
	'if'           reduce using rule 7
	'int'          reduce using rule 7
	'print'        reduce using rule 7
	'return'       reduce using rule 7
	'string'       reduce using rule 7
	'true'         reduce using rule 7
	'void'         reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 14

	Decl -> Type Ident '=' . Expr ';'                   (rule 8)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 15

	Expr6 -> Ident .                                    (rule 35)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 39)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	'('            shift, and enter state 59
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35


State 16

	Expr6 -> Integer .                                  (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	'&&'           reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'||'           reduce using rule 36


State 17

	Expr6 -> String .                                   (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 18

	Expr5 -> Expr6 .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 19

	Expr4 -> Expr5 .                                    (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'||'           reduce using rule 46


State 20

	Expr4 -> Expr4 . MulOp Expr5                        (rule 45)
	Expr3 -> Expr4 .                                    (rule 48)

	'!='           reduce using rule 48
	'%'            shift, and enter state 56
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            shift, and enter state 57
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            shift, and enter state 58
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48

	MulOp          goto state 55

State 21

	Expr3 -> Expr3 . AddOp Expr4                        (rule 47)
	Expr2 -> Expr3 .                                    (rule 50)

	'!='           reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'+'            shift, and enter state 53
	','            reduce using rule 50
	'-'            shift, and enter state 54
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50

	AddOp          goto state 52

State 22

	Expr2 -> Expr2 . RelOp Expr3                        (rule 49)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 51)
	Expr1 -> Expr2 .                                    (rule 52)

	'!='           shift, and enter state 45
	'&&'           shift, and enter state 46
	')'            reduce using rule 52
	','            reduce using rule 52
	';'            reduce using rule 52
	'<'            shift, and enter state 47
	'<='           shift, and enter state 48
	'=='           shift, and enter state 49
	'>'            shift, and enter state 50
	'>='           shift, and enter state 51
	'||'           reduce using rule 52

	RelOp          goto state 44

State 23

	Expr -> Expr1 . '||' Expr                           (rule 53)
	Expr -> Expr1 .                                     (rule 54)

	')'            reduce using rule 54
	','            reduce using rule 54
	';'            reduce using rule 54
	'||'           shift, and enter state 43


State 24

	Decl -> Type Ident '=' Expr . ';'                   (rule 8)

	';'            shift, and enter state 42


State 25

	Expr5 -> '!' . Expr6                                (rule 43)

	'('            shift, and enter state 26
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 41

State 26

	Expr6 -> '(' . Expr ')'                             (rule 41)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 40

State 27

	Expr5 -> '-' . Expr6                                (rule 42)

	'('            shift, and enter state 26
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 39

State 28

	Expr6 -> 'false' .                                  (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38


State 29

	Expr6 -> 'true' .                                   (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'||'           reduce using rule 37


State 30

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 31

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'||'           reduce using rule 3


State 32

	ListArg -> Arg .                                    (rule 13)
	ListArg -> Arg . ',' ListArg                        (rule 14)

	')'            reduce using rule 13
	','            shift, and enter state 38


State 33

	Decl -> Type Ident '(' ListArg . ')' Block          (rule 9)

	')'            shift, and enter state 37


State 34

	Arg -> Type . Ident                                 (rule 10)
	Arg -> Type . '&' Ident                             (rule 11)

	'&'            shift, and enter state 36
	L_ident        shift, and enter state 2

	Ident          goto state 35

State 35

	Arg -> Type Ident .                                 (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 36

	Arg -> Type '&' . Ident                             (rule 11)

	L_ident        shift, and enter state 2

	Ident          goto state 71

State 37

	Decl -> Type Ident '(' ListArg ')' . Block          (rule 9)

	'{'            shift, and enter state 70

	Block          goto state 69

State 38

	ListArg -> Arg ',' . ListArg                        (rule 14)

	')'            reduce using rule 12
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 32
	ListArg        goto state 68
	Type           goto state 34

State 39

	Expr5 -> '-' Expr6 .                                (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'||'           reduce using rule 42


State 40

	Expr6 -> '(' Expr . ')'                             (rule 41)

	')'            shift, and enter state 67


State 41

	Expr5 -> '!' Expr6 .                                (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 42

	Decl -> Type Ident '=' Expr ';' .                   (rule 8)

	'!'            reduce using rule 8
	'('            reduce using rule 8
	'-'            reduce using rule 8
	';'            reduce using rule 8
	'boolean'      reduce using rule 8
	'break'        reduce using rule 8
	'continue'     reduce using rule 8
	'false'        reduce using rule 8
	'if'           reduce using rule 8
	'int'          reduce using rule 8
	'print'        reduce using rule 8
	'return'       reduce using rule 8
	'string'       reduce using rule 8
	'true'         reduce using rule 8
	'void'         reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_ident        reduce using rule 8
	L_integ        reduce using rule 8
	L_quoted       reduce using rule 8
	%eof           reduce using rule 8


State 43

	Expr -> Expr1 '||' . Expr                           (rule 53)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 66

State 44

	Expr2 -> Expr2 RelOp . Expr3                        (rule 49)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 65

State 45

	RelOp -> '!=' .                                     (rule 68)

	'!'            reduce using rule 68
	'('            reduce using rule 68
	'-'            reduce using rule 68
	'false'        reduce using rule 68
	'true'         reduce using rule 68
	L_ident        reduce using rule 68
	L_integ        reduce using rule 68
	L_quoted       reduce using rule 68


State 46

	Expr1 -> Expr2 '&&' . Expr1                         (rule 51)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 64

State 47

	RelOp -> '<' .                                      (rule 63)

	'!'            reduce using rule 63
	'('            reduce using rule 63
	'-'            reduce using rule 63
	'false'        reduce using rule 63
	'true'         reduce using rule 63
	L_ident        reduce using rule 63
	L_integ        reduce using rule 63
	L_quoted       reduce using rule 63


State 48

	RelOp -> '<=' .                                     (rule 64)

	'!'            reduce using rule 64
	'('            reduce using rule 64
	'-'            reduce using rule 64
	'false'        reduce using rule 64
	'true'         reduce using rule 64
	L_ident        reduce using rule 64
	L_integ        reduce using rule 64
	L_quoted       reduce using rule 64


State 49

	RelOp -> '==' .                                     (rule 67)

	'!'            reduce using rule 67
	'('            reduce using rule 67
	'-'            reduce using rule 67
	'false'        reduce using rule 67
	'true'         reduce using rule 67
	L_ident        reduce using rule 67
	L_integ        reduce using rule 67
	L_quoted       reduce using rule 67


State 50

	RelOp -> '>' .                                      (rule 65)

	'!'            reduce using rule 65
	'('            reduce using rule 65
	'-'            reduce using rule 65
	'false'        reduce using rule 65
	'true'         reduce using rule 65
	L_ident        reduce using rule 65
	L_integ        reduce using rule 65
	L_quoted       reduce using rule 65


State 51

	RelOp -> '>=' .                                     (rule 66)

	'!'            reduce using rule 66
	'('            reduce using rule 66
	'-'            reduce using rule 66
	'false'        reduce using rule 66
	'true'         reduce using rule 66
	L_ident        reduce using rule 66
	L_integ        reduce using rule 66
	L_quoted       reduce using rule 66


State 52

	Expr3 -> Expr3 AddOp . Expr4                        (rule 47)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 63

State 53

	AddOp -> '+' .                                      (rule 58)

	'!'            reduce using rule 58
	'('            reduce using rule 58
	'-'            reduce using rule 58
	'false'        reduce using rule 58
	'true'         reduce using rule 58
	L_ident        reduce using rule 58
	L_integ        reduce using rule 58
	L_quoted       reduce using rule 58


State 54

	AddOp -> '-' .                                      (rule 59)

	'!'            reduce using rule 59
	'('            reduce using rule 59
	'-'            reduce using rule 59
	'false'        reduce using rule 59
	'true'         reduce using rule 59
	L_ident        reduce using rule 59
	L_integ        reduce using rule 59
	L_quoted       reduce using rule 59


State 55

	Expr4 -> Expr4 MulOp . Expr5                        (rule 45)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 62

State 56

	MulOp -> '%' .                                      (rule 62)

	'!'            reduce using rule 62
	'('            reduce using rule 62
	'-'            reduce using rule 62
	'false'        reduce using rule 62
	'true'         reduce using rule 62
	L_ident        reduce using rule 62
	L_integ        reduce using rule 62
	L_quoted       reduce using rule 62


State 57

	MulOp -> '*' .                                      (rule 60)

	'!'            reduce using rule 60
	'('            reduce using rule 60
	'-'            reduce using rule 60
	'false'        reduce using rule 60
	'true'         reduce using rule 60
	L_ident        reduce using rule 60
	L_integ        reduce using rule 60
	L_quoted       reduce using rule 60


State 58

	MulOp -> '/' .                                      (rule 61)

	'!'            reduce using rule 61
	'('            reduce using rule 61
	'-'            reduce using rule 61
	'false'        reduce using rule 61
	'true'         reduce using rule 61
	L_ident        reduce using rule 61
	L_integ        reduce using rule 61
	L_quoted       reduce using rule 61


State 59

	Expr6 -> Ident '(' . ListExpr ')'                   (rule 39)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	')'            reduce using rule 55
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 60
	ListExpr       goto state 61

State 60

	ListExpr -> Expr .                                  (rule 56)
	ListExpr -> Expr . ',' ListExpr                     (rule 57)

	')'            reduce using rule 56
	','            shift, and enter state 74


State 61

	Expr6 -> Ident '(' ListExpr . ')'                   (rule 39)

	')'            shift, and enter state 73


State 62

	Expr4 -> Expr4 MulOp Expr5 .                        (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45


State 63

	Expr4 -> Expr4 . MulOp Expr5                        (rule 45)
	Expr3 -> Expr3 AddOp Expr4 .                        (rule 47)

	'!='           reduce using rule 47
	'%'            shift, and enter state 56
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            shift, and enter state 57
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            shift, and enter state 58
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47

	MulOp          goto state 55

State 64

	Expr1 -> Expr2 '&&' Expr1 .                         (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	'||'           reduce using rule 51


State 65

	Expr3 -> Expr3 . AddOp Expr4                        (rule 47)
	Expr2 -> Expr2 RelOp Expr3 .                        (rule 49)

	'!='           reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'+'            shift, and enter state 53
	','            reduce using rule 49
	'-'            shift, and enter state 54
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49

	AddOp          goto state 52

State 66

	Expr -> Expr1 '||' Expr .                           (rule 53)

	')'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53


State 67

	Expr6 -> '(' Expr ')' .                             (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 68

	ListArg -> Arg ',' ListArg .                        (rule 14)

	')'            reduce using rule 14


State 69

	Decl -> Type Ident '(' ListArg ')' Block .          (rule 9)

	'!'            reduce using rule 9
	'('            reduce using rule 9
	'-'            reduce using rule 9
	';'            reduce using rule 9
	'boolean'      reduce using rule 9
	'break'        reduce using rule 9
	'continue'     reduce using rule 9
	'false'        reduce using rule 9
	'if'           reduce using rule 9
	'int'          reduce using rule 9
	'print'        reduce using rule 9
	'return'       reduce using rule 9
	'string'       reduce using rule 9
	'true'         reduce using rule 9
	'void'         reduce using rule 9
	'while'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_ident        reduce using rule 9
	L_integ        reduce using rule 9
	L_quoted       reduce using rule 9
	%eof           reduce using rule 9


State 70

	Block -> '{' . ListStmt '}'                         (rule 15)
